# processamento-de-imagens

./: .coveragerc  .gitignore  .pylintrc  LICENSE.md  Makefile  README.md  pyproject.toml  pytest.ini  sigal.conf.py
.github/workflows/: test-and-deploy.yml
images/src/gatinhos/: 1080.jfif  150.jfif  200.jfif  4096.jfif  768.jfif
scripts/: test.py
scripts/bash/: test.sh
scripts/python/: lint.py
sigal_gallery/: process.py
tests/sigal_gallery/: test_process.py
