[tool.poetry]
name = "sigal_gallery"
version = "0.1.0"
description = "Aplicação de galeria de imagens web."
authors = ["Bruno Araujo <araujo.contato@gmail.com>"]
maintainers =  ["Bruno Araujo <araujo.contato@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.8.10"
sigal = "^2.2"
boto3 = "1.17.100"
botocore = "1.20.100"

[tool.poetry.dev-dependencies]
coverage = "^6.0"
pytest = "^6.2.5"
pytest-mock = "^3.6.1"
pylint = "^2.11.1"
autopep8 = "^1.5.7"

[tool.poetry.scripts]
lint = "scripts.lint:lint"
test = "scripts.test:test"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
